# ptndle-cli

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml  sinners.json
src/: compare.rs  data.rs  flags.rs  guess.rs  main.rs  play.rs
